--- a/Lab2/Base.lproj/Mod A.storyboard
+++ b/Lab2/Base.lproj/Mod A.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="vrb-Ji-x3O">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="vrb-Ji-x3O">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -22,46 +22,76 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Freq 1:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N6h-sw-DXJ" colorLabel="IBBuiltInLabel-Red">
-                                <rect key="frame" x="16" y="20" width="343" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Freq 2:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3YY-vR-s4D">
-                                <rect key="frame" x="16" y="49" width="343" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="-10" maxValue="10" translatesAutoresizingMaskIntoConstraints="NO" id="iPF-K1-Q8e">
-                                <rect key="frame" x="153" y="318.5" width="304" height="31"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="m0A-21-DeW">
+                                <rect key="frame" x="0.0" y="20" width="375" height="0.0"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Freq 2:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3YY-vR-s4D">
+                                        <rect key="frame" x="16" y="36.5" width="343" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Freq 1:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N6h-sw-DXJ" colorLabel="IBBuiltInLabel-Red">
+                                        <rect key="frame" x="16" y="8" width="343" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="-10" maxValue="10" translatesAutoresizingMaskIntoConstraints="NO" id="iPF-K1-Q8e">
+                                        <rect key="frame" x="6" y="94.5" width="363" height="31"/>
+                                        <connections>
+                                            <action selector="setAmpThrashold:" destination="vrb-Ji-x3O" eventType="valueChanged" id="gH7-6v-sRB"/>
+                                        </connections>
+                                    </slider>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Amplitude" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="baQ-tm-65M">
+                                        <rect key="frame" x="16" y="65.5" width="343" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bVB-to-PgF">
+                                        <rect key="frame" x="128" y="132.5" width="118" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="BVo-4X-0yd"/>
+                                            <constraint firstAttribute="width" constant="118" id="tVX-AR-92Y"/>
+                                        </constraints>
+                                        <state key="normal" title="Toggle Freq Lock"/>
+                                        <connections>
+                                            <action selector="toggleFreqLock:" destination="vrb-Ji-x3O" eventType="touchUpInside" id="jbU-md-DfK"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="300" id="yi0-uS-heV"/>
+                                    <constraint firstItem="3YY-vR-s4D" firstAttribute="top" secondItem="N6h-sw-DXJ" secondAttribute="bottom" constant="8" id="A1b-Mo-j2j"/>
+                                    <constraint firstItem="baQ-tm-65M" firstAttribute="top" secondItem="3YY-vR-s4D" secondAttribute="bottom" constant="8" id="Hxa-AW-hGu"/>
+                                    <constraint firstItem="N6h-sw-DXJ" firstAttribute="top" secondItem="m0A-21-DeW" secondAttribute="top" constant="8" id="LhO-Zi-tZF"/>
+                                    <constraint firstItem="bVB-to-PgF" firstAttribute="top" secondItem="iPF-K1-Q8e" secondAttribute="bottom" constant="8" id="Mlr-HK-hue"/>
+                                    <constraint firstItem="iPF-K1-Q8e" firstAttribute="leading" secondItem="m0A-21-DeW" secondAttribute="leading" constant="8" id="QWr-q0-byg"/>
+                                    <constraint firstAttribute="trailing" secondItem="N6h-sw-DXJ" secondAttribute="trailing" constant="16" id="c6z-ta-UkF"/>
+                                    <constraint firstAttribute="trailing" secondItem="iPF-K1-Q8e" secondAttribute="trailing" constant="8" id="cwc-jt-wBh"/>
+                                    <constraint firstItem="N6h-sw-DXJ" firstAttribute="leading" secondItem="m0A-21-DeW" secondAttribute="leading" constant="16" id="eLf-62-rKZ"/>
+                                    <constraint firstAttribute="trailing" secondItem="baQ-tm-65M" secondAttribute="trailing" constant="16" id="faG-GC-0lx"/>
+                                    <constraint firstAttribute="height" id="gJ4-Yj-FE0"/>
+                                    <constraint firstAttribute="trailing" secondItem="3YY-vR-s4D" secondAttribute="trailing" constant="16" id="ocA-AJ-mWB"/>
+                                    <constraint firstItem="iPF-K1-Q8e" firstAttribute="top" secondItem="baQ-tm-65M" secondAttribute="bottom" constant="8" id="sWC-cs-4bA"/>
+                                    <constraint firstItem="bVB-to-PgF" firstAttribute="centerX" secondItem="m0A-21-DeW" secondAttribute="centerX" id="xNy-F5-PRI"/>
+                                    <constraint firstItem="baQ-tm-65M" firstAttribute="leading" secondItem="m0A-21-DeW" secondAttribute="leading" constant="16" id="xrD-Wh-6BD"/>
+                                    <constraint firstItem="3YY-vR-s4D" firstAttribute="leading" secondItem="m0A-21-DeW" secondAttribute="leading" constant="16" id="zCX-xe-PnX"/>
                                 </constraints>
-                                <connections>
-                                    <action selector="setAmpThrashold:" destination="vrb-Ji-x3O" eventType="valueChanged" id="gH7-6v-sRB"/>
-                                </connections>
-                            </slider>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bVB-to-PgF">
-                                <rect key="frame" x="257" y="50" width="118" height="30"/>
-                                <state key="normal" title="Toggle Freq Lock"/>
-                                <connections>
-                                    <action selector="toggleFreqLock:" destination="vrb-Ji-x3O" eventType="touchUpInside" id="jbU-md-DfK"/>
-                                </connections>
-                            </button>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tap For Settings" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tNv-d0-lly">
+                                <rect key="frame" x="16" y="28" width="343" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <constraints>
-                            <constraint firstItem="3YY-vR-s4D" firstAttribute="leading" secondItem="09f-hW-IkQ" secondAttribute="leadingMargin" id="7ce-ih-ceK"/>
-                            <constraint firstItem="3YY-vR-s4D" firstAttribute="trailing" secondItem="09f-hW-IkQ" secondAttribute="trailingMargin" id="Akr-jY-HyA"/>
-                            <constraint firstAttribute="trailing" secondItem="iPF-K1-Q8e" secondAttribute="trailing" constant="-80" id="F1O-sL-X5W"/>
-                            <constraint firstItem="bVB-to-PgF" firstAttribute="top" secondItem="JY7-Ot-62u" secondAttribute="bottom" constant="30" id="KCt-ei-pEi"/>
-                            <constraint firstItem="iPF-K1-Q8e" firstAttribute="centerY" secondItem="09f-hW-IkQ" secondAttribute="centerY" id="KXi-tV-a1t"/>
-                            <constraint firstItem="N6h-sw-DXJ" firstAttribute="top" secondItem="JY7-Ot-62u" secondAttribute="bottom" id="M8o-yN-Xtm"/>
-                            <constraint firstItem="N6h-sw-DXJ" firstAttribute="trailing" secondItem="09f-hW-IkQ" secondAttribute="trailingMargin" id="eO6-7q-BDp"/>
-                            <constraint firstAttribute="trailing" secondItem="bVB-to-PgF" secondAttribute="trailing" id="jRw-w2-rKJ"/>
-                            <constraint firstItem="3YY-vR-s4D" firstAttribute="top" secondItem="N6h-sw-DXJ" secondAttribute="bottom" constant="8" id="pC8-cZ-gV4"/>
-                            <constraint firstItem="N6h-sw-DXJ" firstAttribute="leading" secondItem="09f-hW-IkQ" secondAttribute="leadingMargin" id="rst-ri-leG"/>
+                            <constraint firstAttribute="trailing" secondItem="m0A-21-DeW" secondAttribute="trailing" id="VH4-iY-IiS"/>
+                            <constraint firstItem="tNv-d0-lly" firstAttribute="top" secondItem="JY7-Ot-62u" secondAttribute="bottom" constant="8" id="VXe-1v-bJq"/>
+                            <constraint firstItem="m0A-21-DeW" firstAttribute="leading" secondItem="09f-hW-IkQ" secondAttribute="leading" id="XF1-GO-Dli"/>
+                            <constraint firstItem="m0A-21-DeW" firstAttribute="top" secondItem="JY7-Ot-62u" secondAttribute="bottom" id="Ym7-SB-F4y"/>
+                            <constraint firstItem="tNv-d0-lly" firstAttribute="trailing" secondItem="09f-hW-IkQ" secondAttribute="trailingMargin" id="o1L-8F-A6S"/>
+                            <constraint firstItem="tNv-d0-lly" firstAttribute="leading" secondItem="09f-hW-IkQ" secondAttribute="leadingMargin" id="xQJ-Kh-Z3m"/>
                         </constraints>
                         <connections>
                             <outlet property="delegate" destination="vrb-Ji-x3O" id="hq7-eO-2Tc"/>
@@ -71,11 +101,13 @@
                         <outlet property="Freq2" destination="3YY-vR-s4D" id="373-eo-rzn"/>
                         <outlet property="FreqLabel" destination="N6h-sw-DXJ" id="bUF-la-L5E"/>
                         <outlet property="ampSlider" destination="iPF-K1-Q8e" id="q7q-y0-NVC"/>
+                        <outlet property="settingsHeightConstraint" destination="gJ4-Yj-FE0" id="dmI-eU-f3b"/>
+                        <outlet property="settingsView" destination="m0A-21-DeW" id="Xcp-Uk-a1J"/>
                     </connections>
                 </glkViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Q6J-Ab-sMD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1172" y="126.38680659670166"/>
+            <point key="canvasLocation" x="1188" y="61.619190404797607"/>
         </scene>
     </scenes>
 </document>
